100% Guaranteed Table Overflow Fix

--- a/vietnam.css
+++ b/vietnam.css
@@ -89,8 +89,8 @@ table tr:first-child th {
 }
 
 @media screen and (width < 500px) {
-    table {
-        font-size:xx-small
+    table,table th {
+        display: hidden;
     }
 }
 
